# python-project-52

./: Makefile  README.md  docker-compose.yml  pyproject.toml
hexlet-code/: db.sqlite3
hexlet-code/core/: forms.py  urls.py  views.py
hexlet-code/labels/: forms.py  models.py  tests.py  urls.py  views.py
hexlet-code/labels/migrations/: 0001_initial.py  0002_label_created_at.py  0003_remove_label_task.py
hexlet-code/locale/ru/LC_MESSAGES/: django.mo  django.po
hexlet-code/statuses/: forms.py  models.py  tests.py  urls.py  views.py
hexlet-code/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_options_alter_status_created_at_and_more.py
hexlet-code/task_manager/: settings.py  urls.py  views.py
hexlet-code/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
hexlet-code/tasks/migrations/: 0001_initial.py  0002_task_created_at.py  0003_task_labels.py
hexlet-code/templates/: base.html  index.html  login.html
hexlet-code/templates/labels/: create.html  delete.html  index.html  update.html
hexlet-code/templates/statuses/: create.html  delete.html  index.html  update.html
hexlet-code/templates/tasks/: create.html  delete.html  index.html  task.html  update.html
hexlet-code/templates/users/: create.html  delete.html  index.html  update.html
hexlet-code/users/: forms.py  tests.py  urls.py  views.py
hexlet-code/users/migrations/: 0001_initial.py
